--- a/SPT_QuietWeather.csproj
+++ b/SPT_QuietWeather.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4653552A-481E-44BE-8A45-260C9FB562FC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SPT_QuietWeather</RootNamespace>
-    <AssemblyName>SPT_QuietWeather</AssemblyName>
+    <RootNamespace>SPT_QuietWind</RootNamespace>
+    <AssemblyName>SPT_QuietWind</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
